# dipoleq

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  DipEq.c  DipFit.mcp  DipFit.prefix.h  DipFit.r  DipLog.out  DipMod.prefix.h  DipolEq.h  FileInput.y  LICENSE  Makefile  Makefile_old  README.md  SimDipEq.c  dipoleq  noxfile.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: build-wheels.yml  build.yml  build_wheels.yml  cmake-build.yml  constraints.txt  imas-tests.yml  labeler.yml  release-drafter.yml  test_windows.yml  tests.yml
DipolEq.pbproj/: garnier.pbxuser  project.pbxproj
External Libraries/: ClibPDF.carbon.lib  cpdflib.h  hdflib.PPC.lib  hdflib.carbon.lib  jpeg.PPC.lib  jpeg.carbon.lib  mfhdf.PPC.lib  mfhdf.carbon.lib  xdr.PPC.lib  xdr.carbon.lib  z.PPC.lib  z.carbon.lib
GEM/: GEM  GEM.xml  beta25.in  beta35.in  dipole_fit.win32.prefix.h  dipole_model.mach-o.prefix.h  dipolem  edge.in  vac.in
GEM/test/: helloworld
Testing/: CMakeLists.txt  DT004c.hdf  DT004c_Conductors.out  DT004c_InValues.out  DT004c_PsiGrid.out  Fit.hdf  Fit.in  Fit_BndMomts.out  Fit_Conductors.out  Fit_FluxPr.out  Fit_InValues.out  Fit_Meas.out  Fit_Plasma.out  Fit_PsiGrid.out  Fit_SVDFit.out  Fit_gs2.out  Mod.hdf  Mod.in  Mod_BndMomts.out  Mod_Conductors.out  Mod_FluxPr.out  Mod_InValues.out  Mod_Meas.out  Mod_Plasma.out  Mod_PsiGrid.out  Mod_gs2.out  beta1.dxf  beta1.hdf  beta1.in  beta1.vw  beta1_BndMomts.out  beta1_Conductors.out  beta1_FluxPr.out  beta1_InValues.out  beta1_Meas.out  beta1_Plasma.out  beta1_PsiGrid.out  beta1_gs2.out  beta1m.in  beta35.hdf  (+27 more)
cmake/: FindPyBind11.cmake
docs/: conf.py  core.rst  dipoleq.rst  index.rst  input.rst  nitpick-exceptions  requirements.txt
ext_libs/: CMakeLists.txt
ext_libs/clibpdf/: CMakeLists.txt
ext_libs/clibpdf/source/: CMakeLists.txt  ChangeLog-zlib  Makefile  Makefile.MacOSX  adler32.c  cmake_install.cmake  compress.c  cpdfFont.c  cpdfInit.c  cpdflib.h  deflate.c  deflate.h  test  tiff.h  tiffio.h  trees.c  zconf.h  zutil.c  zutil.h
ext_libs/clibpdf/util/t1utils-1.9/: mkinstalldirs
ext_libs/clibpdf/util/zlibcomp.ext/: zconf.h
fortran/: CMakeLists.txt  stcom_com.c  tspack.P  tspack.c  tspack.cp  tspack.doc  tspack.f  tspack.h
idl/: LDX_Beta10.HDF.ps  LDX_Vac.HDF.ps  drawldx.pro  dtgarrow.pro  effi_plot.pro  fpoly.pro  get_hdf_data.pro  ldx_eqplot.pro  ldxeq_plot.pro  make_cgms.pro  mhd_stab.pro  print_hdf_sd_info.pro
includes/: AddCoilJ.h  AddShellJ.h  CCoil.h  CDipoleIntStable.h  CDipoleStablePsiN.h  CDipoleStd.h  CPlasmaModel.h  DelChiSqr.h  FileInput.h  FileOutput.h  FindJ.h  FindMeasFit.h  Find_ShellCurrent.h  Find_dJdy.h  GetFluxMoments.h  GetFluxParameters.h  GetPlasmaParameters.h  HDFInput.h  HDFOutput.h  InitJ.h  J_DipoleStd.h  J_IsoNoFlow.h  J_Std.h  LeastSquares.h  LoadBndryGreens.h  LoadMeasGreens.h  LoadShellGreens.h  PDFOutput.h  PlasmaBoundary.h  PsiBoundary.h  PtInPolygon.h  Restart.h  SVDFit.h  VAX_Alloc.h  coil.h  contour.h  dUnkn.h  fpoly.h  green.h  interpolate.h  (+31 more)
postprocess/: CMakeLists.txt  HDF2Nimrod.c  HDFInput.c  Makefile  PostDip.mcp  PostProc.c  dipoleq_h5togeqdsk.py  h5profiles.py  h5togeqdsk.py  hdf2efit.ipynb
python/: CMakeLists.txt  NbDipolEq.cpp  NbDipolEq.hpp  PyDipolEq.cpp  PyDipolEq.hpp  PyDipoleEq.hpp  nb_stub_fixes.txt  test_hdf5.ipynb
python/dev/: dont_test_delete.py  stubgen.py
python/dipoleq/: __init__.py  __main__.py  _c.pyi  core.pyi  ds.py  ds_names.py  file_input.py  geqdsk.py  h5togeqdsk.py  imas.py  imas_dipole_extras.py  input.py  input_validator.py  main_cli.py  mas.py  omas.py  omas_dipole_extras.py  plot.py  post_process.py  read.py  read_dotin.py  saveh5.py  solve.py  solver.py  util.py
python/tests/: beta1.in  beta1.yaml  beta1_psinpeak.in  dont_test_delete.py  test_beta1.py  test_imas.py  test_omas.py  test_outs.py  test_psinpeak.py
python/tests/data/: beta1.in  beta1.yaml
python/tests/data/reference/: beta1_omas.nc
python/tests/fixtures/: typeguard_exclude.py  typeguard_fix.py
python/tests/scripts/: recreate_reference_files.py
sources/: AddCoilJ.c  AddShellJ.c  CDipoleIntStable.cc  CDipoleStablePsiN.cc  CDipoleStd.cc  CMakeLists.txt  CMeasure.cc  CMeasurement.cpp  CMeasurement.h  CPlasmaModel.cc  DelChiSqr.c  DipolEq.r  FileInput.c  FileInput.cc  FileOutput.c  FileOutput.cc  FindJ.cc  FindMeasFit.c  Find_ShellCurrent.c  Find_dJdy.c  GetFluxMoments.c  GetFluxParameters.c  GetFluxParameters.cc  GetPlasmaParameters.c  GetPlasmaParameters.cc  HDF5Output.c  HDFOutput.c  InitJ.c  J_DipoleStd.c  J_IsoNoFlow.c  J_Std.c  LeastSquares.c  LoadBndryGreens.c  LoadMeasGreens.c  LoadShellGreens.c  NimrodOutput.c  PDFOutput.c  PlasmaBoundary.c  PsiBoundary.c  Restart.c  (+39 more)
